--- a/source/_posts/20171216-Git-basic.md
+++ b/source/_posts/20171216-Git-basic.md
@@ -17,7 +17,7 @@ date: 2017-12-16 22:09:59
 
 ### # Check version
 
-``` bash
+``` shell
 $ git --version
 ```
 
@@ -25,9 +25,9 @@ $ git --version
 
 ### # Set config values
 
-``` bash
-$ git config --global user.name 'jason0853'
-$ git config --global user.email 'jason0853@gmail.com'
+``` shell
+$ git config --global user.name 'username'
+$ git config --global user.email 'your email'
 $ git config --list
 ```
 
@@ -39,7 +39,7 @@ ex)<code>git config --global --unset user.name</code>
 
 ### # Initialize a repository
 
-``` bash
+``` shell
 $ git init
 ```
 
@@ -49,8 +49,8 @@ $ git init
 
 {% gist 9f4a098f09452ac869722e1192f679bf %}
 
-* root 디렉토리에 <code>.gitignore</code> 파일을 만듭니다.
-* <code>.gitignore</code> 파일은 git을 통해 소스관리를 할 필요 없는 파일이나 폴더명을 써주시면 됩니다.
+* root 디렉토리에 *.gitignore* 파일을 만듭니다.
+* *.gitignore* 파일은 git을 통해 소스관리를 할 필요 없는 파일이나 폴더명을 써주시면 됩니다.
 
 ### # Common workflow
 
@@ -64,67 +64,127 @@ local repo-->working directory: git merge
 ```
 
 git의 흐름을 단계별로 diagram으로 정리해보았습니다.
-그럼 위 도표에서 git push까지 진행해보겠습니다.
+그럼 위에 나온 명령어들과 함께 간단한 실습을 한번 진행해보겠습니다.
 
-``` bash
+![](../../../../images/git/git-basic-01.png)
+
+``` shell
 $ git status
+```
+
+* 우선 *git-test* 라는 프로젝트 폴더 하나를 만들고 앞서 얘기했던 <code>git init</code> 작업과 *.gitignore* 파일을 생성하였습니다.
+* <code>git status</code>는 파일의 현재 상태를 알려줍니다. commit을 한번도 진행하지 않았기 때문에 새로 생성된 file은 **Untracked files**로 분류되어 있습니다.
+
+![](../../../../images/git/git-basic-02.png)
+
+``` shell
 $ git add -A
-$ git commit -m 'initial commit'
-$ git remote origin 'https://github.com/jason0853/git-test.git'
+$ git commit -m 'your commit message'
+```
+
+* 현재는 *.gitignore* 파일 하나만 있어서 <code>git add .gitignore</code> 이런식으로 명령어를 입력해도 되지만 여러 파일들을 한번에 staging area로 옮기는 작업을 할려면 간단하게 <code>A</code> 옵션을 주면 됩니다.
+* staging area에 잘 옮겨졌는지 체크해보려면 <code>git status</code> 명령어를 실행시킵니다. 아까와 다르게 녹색 컬러로 변경된 *.gitignore* 파일을 확인할 수 있습니다.
+* <code>commit</code> 명령어를 통하여 staging area에서 local repository로 옮기고 git 상태를 체크해봅니다. 터미널 캡쳐 마지막 부분을 보면은 nothing to commit 이라고 나옵니다. 더 이상 커밋 작업을 할게 없으므로 <code>push</code> 작업을 할 차례입니다.
+
+![](../../../../images/git/git-basic-03.png)
+
+``` shell
+$ git remote add origin 'your remote url'
+$ git remote -v
 $ git push -u origin master
 ```
 
-1. <code>git status</code> - 파일의 현재 상태를 알려줍니다. commit을 한번도 하지 않았기 때문에 새로 생성된 file은 Untracked files로 분류되어 있을겁니다. 
-2. <code>git add -A</code> - <code>A</code> 옵션을 통하여 디렉토리에 있는 모든 파일을 staging area로 저장됩니다.
-3. <code>git commit -m 'your message'</code> - commit message와 함께 local repository로 저장됩니다.
-4. <code>git remote origin 'your remote url'</code> - 원격 저장소로 저장하기 전에 원격 저장소 url를 추가합니다. 원격저장소는 github 및 bitbucket 등 아무거나 사용해주셔도 됩니다.
-5. <code>git push -u origin master</code> - <code>u</code> 옵션은 향후에 <code>origin master</code> 를 적지 않아도 원격 저장소로 저장됩니다.
+* 원격저장소를 추가하지 않았기 때문에 push 작업을 진행할 수가 없습니다. 필자는 github를 사용하여 원격저장소를 만들었지만 Bitbucket, gitlab 등을 사용하셔도 됩니다.
+* remote url을 추가한 뒤에 <code>v</code> 옵션을 통해 단축이름과 url을 함께 볼 수 있습니다.
+* push 작업을 초기에 할 때 <code>u</code> 옵션을 주면은 <code>origin master</code>를 적지 않아도 <code>git push</code> 명령어만으로 원격저장소로 저장됩니다.
 
-보통 회사에서 일할 때는 master branch에서 작업하는 경우는 거의 없습니다. 다수의 개발자들과 서로 협업을 해야하므로 각각 branch를 생성해서 checkout 한 다음에 작업을 진행합니다. 작업이 끝난 이후에는 각 개발자들의 작업내역을 master branch로 merge 시킵니다. 그리고 배포를 진행합니다.
+![](../../../../images/git/git-basic-04.png)
+
+작업이 끝난 뒤 자신의 원격저장소로 가서 확인해보면 push한 <code>.gitignore</code> 파일을 볼 수 있습니다.
+하지만 보통 회사에서 일할 때는 master branch에서 작업하는 경우는 거의 없습니다. 다수의 개발자들과 서로 협업을 해야하므로 각각 branch를 생성해서 checkout 한 다음에 작업을 진행합니다. 작업이 끝난 이후에는 각 개발자들의 작업내역을 master branch로 merge 시킵니다. 그리고 배포를 진행합니다.
 그럼 이어서 한번 진행해보겠습니다.
 
-``` bash
-$ git branch test
+![](../../../../images/git/git-basic-05.png)
+
+``` asciidoc .gitignore
+node_modules
+dist
+.env
+```
+
+``` html index.html
+<!DOCTYPE html>
+<html>
+  <head></head>
+  <body></body>
+</html>
+```
+
+``` shell
+$ git branch 'new branch name'
 $ git branch
-$ git checkout test
-$ git add -A
-$ git commit -m 'Add login method'
-$ git push -u origin test
+$ git checkout 'branch name'
+```
+
+* 필자는 test라는 새로운 브랜치를 하나 생성해서 작업을 진행을 했습니다.
+* 새로운 branch를 만들고 나서 제대로 만들어졌는지 확인하려면 <code>git branch</code> 명령어를 실행시켜줍니다.
+* test 브랜치로 이동하기 위해서 <code>git checkout test</code> 명령어를 실행시켜줍니다.
+***이 때 기존 master(local) branch에 있는 file source를 test branch로 복사됩니다.***
+* 필자는 <code>vim</code>이라는 tool을 사용하여 .gitignore 파일을 수정하고 index.html 파일을 생성했습니다. 다른 tool을 사용해서 따라하셔도 git 작업과 무관합니다.
+* <code>git status</code>로 파일의 체크 상태를 체크해봤는데 이전과는 다르게 .gitignore 파일은 **Untracked files**로 분류되어 있지 않습니다.
+***그 이유는 이미 commit한 files들은 git에 의해 tracking이 되고 있기 때문입니다. 반대로 index.html은 새로 생성한 다음에 commit 작업을 한번도 진행하지 않았기 때문에 Untracked files로 분류되어 있는 것입니다.***
+
+![](../../../../images/git/git-basic-06.png)
+![](../../../../images/git/git-basic-07.png)
+
+``` shell
 $ git branch -a
-$ git checkout master
+```
+
+* <code>add</code>, <code>commit</code>, <code>push</code> 작업을 순서대로 진행합니다.
+* 원격저장소로 가서 확인하면 test branch로 바꾼 다음 확인하면 위 그림과 같이 push한 파일들과 commit message들을 확인할 수 있습니다.
+* <code>a</code> 옵션과 함께 <code>git branch</code> 명령어를 실행시켜면 local branch와 remote branch 둘 다 확인할 수 있습니다.
+* test branch 에서의 작업이 다 끝났으므로 merge 작업을 해보겠습니다.
+
+![](../../../../images/git/git-basic-08.png)
+![](../../../../images/git/git-basic-09.png)
+
+``` shell
 $ git pull
 $ git branch --no-merged
-$ git merge test
-$ git push
+$ git merge 'branch name'
+```
+* master branch에서 test branch를 merge 시킬 것이기 때문에 <code>checkout</code>을 통해 master branch로 이동했습니다.
+***이미 만들어진 branch로 checkout 작업을 진행한 경우에는 source의 변경사항이 없습니다.***
+* 현재는 자기 혼자서만 작업하기 때문에 master branch에서 굳이 <code>git pull</code>을 할 필요는 없습니다. 하지만 여러 개발자들과 협업하고 있다는 작업 가정하에 진행하겠습니다. 이전에 master branch에서 push 작업을 할 때 <code>u</code> 옵션을 주었기 때문에 굳이 <code>origin master</code>를 써 줄 필요는 없습니다.
+***항상 branch를 checkout한 경우에는 conflict를 최소화하기 위해 원격 작업 내역을 병합한 다음 자신의 작업내역을 진행하는 습관을 들이는 것이 좋습니다. ***
+* <code>no-merged</code> 옵션을 통하여 merge 하지 않은 branch list를 확인합니다.
+* test branch를 master branch로 merge 시킵니다. 이때 *Fast-forward*라는 메세지가 나오면서 순식간에 병합이 일어납니다. 즉, merge 할 test 브랜치가 master branch가 가리키는 것보다 앞으로 진행한 commit 이기 때문에 master branch 포인터는 최신 커밋으로 이동하는 방식을 일컫는 말입니다.
+* push 작업을 한 뒤 github에 master branch 작업내역을 확인합니다.
+
+![](../../../../images/git/git-basic-10.png)
+
+``` shell
 $ git branch --merged
-$ git branch -d test
-$ git push origin --delete test
+$ git branch -d 'branch name'
+$ git push origin --delete 'remote branch name'
+```
+
+* <code>merged</code> 옵션을 통하여 merge한 브랜치 list를 보여줍니다.
+* 로컬 branch(master, test) 코드가 동일해졌으니 <code>d</code> 옵션을 주어 필요없는 test branch를 삭제해줍니다.
+* 원격 branch(remotes/origin/master, remotes/origin/test) 코드도 동일해졌으니 원격 test branch도 삭제시켜줍니다. <code>delete</code> 옵션을 통해 push 합니다.
+
+![](../../../../images/git/git-basic-11.png)
+
+``` shell
 $ git log --all --decorate --graph --oneline --stat
 ```
 
-명령어 순서대로 설명해보겠습니다.
-1. <code>git branch test</code> - branch name을 생성합니다.
-2. <code>git branch</code> - local branch list를 보여줍니다.
-3. <code>git checkout test</code> - master(local) branch에 있는 source를 test branch로 복사됩니다.
-그 이후 작업해야할 코드를 작성합니다. 코드 작성이 끝난 이후 우리는 git 작업을 이어서 진행합니다.
-4. working directory에서 staging area로 저장됩니다.
-5. 'Add login method'라는 메세지와 함께 staging area에서 local repository로 저장됩니다.
-6. local repository에서 test branch인 remote repository로 저장됩니다.
-7. <code>git branch -a</code> - <code>a</code> 옵션을 통하여 remote branch list까지 보여줍니다. remotes/origin/test 브랜치가 생성되어 있는걸 확인하실 수 있습니다.
-8. <code>git checkout master</code> - local master branch로 이동합니다. 이때 test 브랜치로 checkout 했을 때와 달리 test 브랜치에 있는 작업내역이 master 브랜치로 복사되지 않습니다.
-***이것을 통해서 우리는 이미 만들어져 있던 branch로 checkout했을 경우는 이전 작업내역을 그대로 유지하고 있으며 새로 생성한 branch를 checkout 했을 경우는 현재 위치해 있는 branch 작업 내역을 그대로 복사한다는 것을 알게 되었습니다.***
-9. <code>git pull</code> - remote repository에서 local repository으로 코드를 저장 및 병합을 시켜줍니다. 이전에 <code>-u</code>옵션을 주었기 때문에 <code>git pull origin master</code>로 다 써주지 않아도 됩니다. 
-***항상 branch를 checkout한 경우에는 conflict를 최소화하기 위해 원격 작업 내역을 병합한 다음 자신의 작업내역을 진행하는 습관을 들이는 것이 좋습니다. ***
-10. <code>no-merged</code> 옵션을 통하여 merge 하지 않은 branch list를 확인합니다.
-11. <code>git merge test</code> - test 브랜치를 master 브랜치로 merge 시킵니다. 이때 ***Fast-forward***라는 메세지가 나오면서 순식간에 병합이 일어납니다. 즉, merge 할 test 브랜치가 master 브랜치가 가리키는 것보다 앞으로 진행한 commit 이기 때문에 master 브랜치 포인터는 최신 커밋으로 이동하는 방식을 일컫는 말입니다.
-12. merge가 잘 되었다면 remote repository로 저장시킵니다. <code>u</code>옵션을 처음에 주고 push했기 때문에 <code>git push origin master</code>를 다 쓰지 않아도 됩니다.
-13. <code>merged</code> 옵션을 통하여 merge한 브랜치 list를 보여줍니다.
-14. 로컬 branch(master, test) 코드가 동일해졌으니 <code>d</code> 옵션을 주어 필요없는 test branch를 삭제해줍니다.
-15. 원격 branch(remotes/origin/master, remotes/origin/test) 코드도 동일해졌으니 원격 test branch도 삭제시켜줍니다. <code>delete</code> 옵션을 통해 push 합니다.
-16. commit history를 확인합니다.
+* 왼쪽 터미널은 test branch를 삭제하고 나서 log를 확인한 것이며 오른쪽 터미널은 branch를 삭제하기 전의 log 캡쳐 사진입니다.
+* commit history를 확인합니다.
   * <code>all</code> - refs/의 모든 참조들의 log들을 출력시켜줍니다.
   * <code>decorate</code> - commit id 오른쪽에 현재 위치해있는 브랜치 name을 보여줍니다.
-  * <code>graph</code> - commit id 왼쪽에 line을 생성하여 commit log를 좀 더 자세히 보여줍니다. 이 옵션을 통하여 각 브랜치 commit log들을 좀 더 시각화하여 branch들간의 차이를 파악할 수 있습니다.
+  * <code>graph</code> - commit id 왼쪽에 line을 생성하여 commit log를 좀 더 시각화 시켜줍니다. branch들간의 차이를 좀 더 쉽게 파악할 수 있습니다.
   * <code>oneline</code> - 한줄로 요약해서 보여줍니다.
   * <code>stat</code> - 변경된 파일들의 목록을 보여줍니다.
 
