--- a/source/_posts/20171216-Git-basic.md
+++ b/source/_posts/20171216-Git-basic.md
@@ -2,14 +2,14 @@
 title: Git basic
 tags:
   - git
-thumbnail: ../../../../images/git-logo.png
+thumbnail: ../../../../images/git/git-logo.png
 categories:
   - Git
 date: 2017-12-16 22:09:59
 ---
 
 
-![](../../../../images/git-logo.png)
+![](../../../../images/git/git-logo.png)
 
 프로젝트를 시작하게 되면 여러 개발자들과 협업을 진행하게 됩니다. 특히 협업할 때 source 관리를 해야되는데 가장 많이 사용하는 git에 대해 한번 살펴보겠습니다. 이번 포스팅에서는 가장 빈번하게 사용되는 명령어와 git의 흐름 상황을 요약 정리해보겠습니다.
 
