Published a post about OOP and inheritance

--- a/source/_posts/20171216-Git-basic.md
+++ b/source/_posts/20171216-Git-basic.md
@@ -187,6 +187,8 @@ $ git log --all --decorate --graph --oneline --stat
   * <code>oneline</code> - 한줄로 요약해서 보여줍니다.
   * <code>stat</code> - 변경된 파일들의 목록을 보여줍니다.
 
+### Wrap-up
+
 지금까지 git의 기초와 일반적인 workflow에 대해 알아보았습니다. 실무에서는 이보다 훨씬 더 복잡한 구조로 되어 있기 때문에 기본 개념을 제대로 이해하셔야 conflict 났을 경우 대처하기가 쉽습니다. command line 이 익숙하지 않은 분들에게는 [SourceTree](https://www.sourcetreeapp.com/)라는 GUI 툴을 추천합니다.
 
 ### Reference
