Published a post about fetch vs pull

--- a/source/_posts/20171216-Git-basic.md
+++ b/source/_posts/20171216-Git-basic.md
@@ -58,7 +58,7 @@ $ git init
 working directory->staging area: git add
 staging area->local repo: git commit
 local repo->remote repo: git push
-remote repo-->local repo: git pull
+remote repo-->working directory: git pull
 local repo-->working directory: git checkout
 local repo-->working directory: git merge
 ```
