--- a/source/_posts/20171216-Git-basic.md
+++ b/source/_posts/20171216-Git-basic.md
@@ -4,7 +4,7 @@ tags:
   - git
 thumbnail: ../../../../images/git/git-logo.png
 categories:
-  - Tool
+  - Ops
   - Git
 date: 2017-12-16 22:09:59
 ---
